--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recharts": "^2.4.3",
     "superjson": "1.9.1",
     "twitter-api-sdk": "^1.2.1",
     "zod": "^3.20.2"
